# nova-x

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platform.txt  readme.md  sdkconfig
backup/: LICENSE  README.md
backup/nova-x-esp32c5/: bitmap.h  bt.cpp  bt.h  button.cpp  button.h  deivces.cpp  devices.h  display.cpp  display.h  globals.cpp  globals.h  nova-x-esp32c5.ino  wifiP.cpp  wifiP.h
backup/old/BW16/: Button.h
backup/uploader/: build.bat  bw16main.py  esp32main.py  image_uploader_bw16.spec  image_uploader_esp32c5.spec
backup/uploader/realtek_tools/1.1.1/debug/: RTL872x_Arduino_debug.JLinkScript
backup/uploader/realtek_tools/1.1.1/tools/windows/src/: amebasize.c  pad.c  pick.c  postbuild_img2_arduino_windows.cpp
cmake/: version_bump.cmake
main/: CMakeLists.txt  globals.h  main.cpp  version.h
main/lib/core/: framework.h  nvs_util.h
main/lib/core/ble_manager/: ble_manager.cpp  ble_manager.h
main/lib/core/wifi_manager/: wifi_manager.cpp  wifi_manager.h
main/lib/module/: module.h
main/lib/module/ble/: andriod.cpp  andriod.h  ios.cpp  ios.h  samsung.cpp  samsung.h  window.cpp  window.h
main/lib/module/ui/: ui.h
main/lib/module/wifi/: beacon.cpp  beacon.h  deauth.cpp  deauth.h
